--- a/index.html
+++ b/index.html
@@ -1,58 +1,209 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="AI Side Hustle Toolkit - Unlock AI-powered income streams with easy-to-use tools and guides.">
-    <title>AI Side Hustle Toolkit</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Spezi Enterprise - Your Gateway to Profitable AI Side Hustles" />
+  <title>Spezi Enterprise | AI Side Hustles </title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(to bottom, #1a1a1a, #2a2a2a);
+      color: #fff;
+    }
+
+    header {
+      background: url('https://source.unsplash.com/1600x900/?technology,future') no-repeat center center/cover;
+      color: #fff;
+      padding: 100px 20px;
+      text-align: center;
+      position: relative;
+    }
+
+    header h1 {
+      font-size: 48px;
+      margin-bottom: 20px;
+    }
+
+    header p {
+      font-size: 20px;
+      max-width: 700px;
+      margin: 0 auto 30px;
+    }
+
+    .cta-button {
+      background-color: #ff6600;
+      color: white;
+      padding: 14px 28px;
+      font-size: 18px;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+
+    .cta-button:hover {
+      background-color: #e65c00;
+    }
+
+    .section {
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    .section h2 {
+      font-size: 36px;
+      margin-bottom: 30px;
+    }
+
+    .hustle-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+    }
+
+    .hustle-card {
+      background-color: #2b2b2b;
+      border-radius: 16px;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.5);
+      width: 320px;
+      overflow: hidden;
+      transition: transform 0.4s, box-shadow 0.4s;
+      cursor: pointer;
+    }
+
+    .hustle-card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 12px 35px rgba(255, 102, 0, 0.3);
+    }
+
+    .hustle-card img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+    }
+
+    .hustle-card-content {
+      padding: 20px;
+    }
+
+    .hustle-card-content h3 {
+      font-size: 20px;
+      margin-bottom: 10px;
+    }
+
+    .hustle-card-content p {
+      font-size: 14px;
+      color: #ccc;
+    }
+
+    .support {
+      background-color: #1a1a1a;
+      padding: 40px 20px;
+      text-align: center;
+    }
+
+    .support h3 {
+      font-size: 28px;
+      margin-bottom: 20px;
+    }
+
+    .support p {
+      font-size: 16px;
+      margin-bottom: 20px;
+    }
+
+    .footer {
+      background-color: #111;
+      color: #ccc;
+      padding: 30px 20px;
+      text-align: center;
+      font-size: 14px;
+    }
+
+    a {
+      color: #ff6600;
+    }
+  </style>
 </head>
+
 <body>
-    <header>
-        <div class="container">
-            <h1>AI Side Hustle Toolkit</h1>
-            <p>Unlock AI-powered income streams with easy-to-use tools and step-by-step guides.</p>
-            <a href="#start" class="cta-button">Get Started</a>
+  <header>
+    <h1>Spezi Enterprise</h1>
+    <p>Your Gateway to Profitable AI Side Hustles & Automation Tools</p>
+    <a href="#start" class="cta-button">Get Started</a>
+  </header>
+
+  <section class="section" id="hustles">
+    <h2>AI Side Hustle Toolkit</h2>
+    <div class="hustle-grid">
+      <div class="hustle-card" onclick="location.href='ai-blog-writer.html'">
+        <img src="https://source.unsplash.com/300x180/?ai,writing" alt="AI Blog Writer">
+        <div class="hustle-card-content">
+          <h3>AI Blog Writer</h3>
+          <p>Use AI to create SEO-optimized blog posts and earn from affiliate links and ads.</p>
         </div>
-    </header>
+      </div>
 
-    <section id="hustles" class="section">
-        <h2>Trending AI Side Hustles</h2>
-        <div class="hustle-cards">
-            <div class="hustle-card">
-                <h3>AI Blog Writer</h3>
-                <p>Create blog content for your site or clients using AI.</p>
-                <a href="#start" class="cta-button">Learn More</a>
-            </div>
-            <div class="hustle-card">
-                <h3>Faceless YouTube Automation</h3>
-                <p>Automate YouTube channels with AI tools for script writing, voiceovers, and editing.</p>
-                <a href="#start" class="cta-button">Learn More</a>
-            </div>
-            <div class="hustle-card">
-                <h3>AI-Powered Resume Service</h3>
-                <p>Help people create job-winning resumes with AI tools.</p>
-                <a href="#start" class="cta-button">Learn More</a>
-            </div>
-            <!-- Add more hustles here as needed -->
+      <div class="hustle-card" onclick="location.href='faceless-youtube.html'">
+        <img src="https://source.unsplash.com/300x180/?youtube,studio" alt="YouTube Automation">
+        <div class="hustle-card-content">
+          <h3>Faceless YouTube Automation</h3>
+          <p>Automate content creation using AI tools for scripting, voiceover, and editing.</p>
         </div>
-    </section>
+      </div>
 
-    <section id="how-it-works" class="section">
-        <h2>How It Works</h2>
-        <p>Step-by-step guides for each hustle. Use AI tools, follow the guides, and start earning.</p>
-        <a href="#start" class="cta-button">Start Hustling</a>
-    </section>
+      <div class="hustle-card" onclick="location.href='print-on-demand.html'">
+        <img src="https://source.unsplash.com/300x180/?tshirt,design" alt="Print-on-Demand">
+        <div class="hustle-card-content">
+          <h3>Print-on-Demand with AI Art</h3>
+          <p>Design merch using AI art and sell via POD platforms like Redbubble or Teespring.</p>
+        </div>
+      </div>
 
-    <section id="start" class="section">
-        <h2>Start Your AI Hustle Now!</h2>
-        <p>Get instant access to tools, tutorials, and prompts to kickstart your AI-driven side hustle.</p>
-        <a href="https://gumroad.com" class="cta-button">Access Toolkit</a>
-    </section>
+      <div class="hustle-card" onclick="location.href='ai-social-manager.html'">
+        <img src="https://source.unsplash.com/300x180/?social,media" alt="Social Media Manager">
+        <div class="hustle-card-content">
+          <h3>AI Social Media Manager</h3>
+          <p>Manage content and engagement for brands using AI schedulers and analytics.</p>
+        </div>
+      </div>
 
-    <footer>
-        <p>&copy; 2025 AI Side Hustle Toolkit | Designed by You</p>
-    </footer>
+      <div class="hustle-card" onclick="location.href='voiceover-creator.html'">
+        <img src="https://source.unsplash.com/300x180/?voice,microphone" alt="Voiceover Creator">
+        <div class="hustle-card-content">
+          <h3>Voiceover & Audiobook Creator</h3>
+          <p>Use AI voices to create content for YouTube, courses, or audiobooks.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <section class="section" id="start">
+    <h2>Start Your AI Hustle</h2>
+    <p>Get access to step-by-step guides, ready-to-use prompts, and premium tools today.</p>
+    <a href="#" class="cta-button">Download Toolkit</a>
+  </section>
+
+  <section class="support">
+    <h3>Need Help?</h3>
+    <p>Reach out to our support team at <a href="mailto:spezi.enterprise@outlook.com">spezi.enterprise@outlook.com</a></p>
+    <p>We’re here to guide you through every step of your AI hustle journey!</p>
+  </section>
+
+  <footer class="footer">
+    <p>&copy; 2025 Spezi Enterprise. All rights reserved.</p>
+    <p><em>Impressum will be updated once physical headquarters are established.</em></p>
+  </footer>
 </body>
+
 </html>
