--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Spezi Enterprise - Your Gateway to Profitable AI Side Hustles" />
-  <title>Spezi Enterprise | AI Side Hustle Toolkit</title>
+  <title>Spezi Enterprise | AI Side Hustles </title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
@@ -17,14 +17,14 @@
 
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #f9f9f9;
-      color: #333;
+      background: linear-gradient(to bottom, #1a1a1a, #2a2a2a);
+      color: #fff;
     }
 
     header {
-      background: linear-gradient(135deg, #1a1a2e, #16213e);
+      background: url('https://source.unsplash.com/1600x900/?technology,future') no-repeat center center/cover;
       color: #fff;
-      padding: 80px 20px;
+      padding: 100px 20px;
       text-align: center;
       position: relative;
     }
@@ -72,16 +72,18 @@
     }
 
     .hustle-card {
-      background-color: white;
+      background-color: #2b2b2b;
       border-radius: 16px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
-      width: 300px;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.5);
+      width: 320px;
       overflow: hidden;
-      transition: transform 0.3s;
+      transition: transform 0.4s, box-shadow 0.4s;
+      cursor: pointer;
     }
 
     .hustle-card:hover {
-      transform: translateY(-5px);
+      transform: translateY(-8px);
+      box-shadow: 0 12px 35px rgba(255, 102, 0, 0.3);
     }
 
     .hustle-card img {
@@ -101,11 +103,11 @@
 
     .hustle-card-content p {
       font-size: 14px;
-      color: #555;
+      color: #ccc;
     }
 
     .support {
-      background-color: #f1f1f1;
+      background-color: #1a1a1a;
       padding: 40px 20px;
       text-align: center;
     }
@@ -127,6 +129,10 @@
       text-align: center;
       font-size: 14px;
     }
+
+    a {
+      color: #ff6600;
+    }
   </style>
 </head>
 
@@ -140,7 +146,7 @@
   <section class="section" id="hustles">
     <h2>AI Side Hustle Toolkit</h2>
     <div class="hustle-grid">
-      <div class="hustle-card">
+      <div class="hustle-card" onclick="location.href='ai-blog-writer.html'">
         <img src="https://source.unsplash.com/300x180/?ai,writing" alt="AI Blog Writer">
         <div class="hustle-card-content">
           <h3>AI Blog Writer</h3>
@@ -148,19 +154,35 @@
         </div>
       </div>
 
-      <div class="hustle-card">
+      <div class="hustle-card" onclick="location.href='faceless-youtube.html'">
         <img src="https://source.unsplash.com/300x180/?youtube,studio" alt="YouTube Automation">
         <div class="hustle-card-content">
-          <h3>YouTube Automation</h3>
+          <h3>Faceless YouTube Automation</h3>
           <p>Automate content creation using AI tools for scripting, voiceover, and editing.</p>
         </div>
       </div>
 
-      <div class="hustle-card">
-        <img src="https://source.unsplash.com/300x180/?resume,career" alt="AI Resume Services">
+      <div class="hustle-card" onclick="location.href='print-on-demand.html'">
+        <img src="https://source.unsplash.com/300x180/?tshirt,design" alt="Print-on-Demand">
         <div class="hustle-card-content">
-          <h3>Resume & Cover Letter</h3>
-          <p>Create professional resumes and letters using AI to help people land jobs.</p>
+          <h3>Print-on-Demand with AI Art</h3>
+          <p>Design merch using AI art and sell via POD platforms like Redbubble or Teespring.</p>
+        </div>
+      </div>
+
+      <div class="hustle-card" onclick="location.href='ai-social-manager.html'">
+        <img src="https://source.unsplash.com/300x180/?social,media" alt="Social Media Manager">
+        <div class="hustle-card-content">
+          <h3>AI Social Media Manager</h3>
+          <p>Manage content and engagement for brands using AI schedulers and analytics.</p>
+        </div>
+      </div>
+
+      <div class="hustle-card" onclick="location.href='voiceover-creator.html'">
+        <img src="https://source.unsplash.com/300x180/?voice,microphone" alt="Voiceover Creator">
+        <div class="hustle-card-content">
+          <h3>Voiceover & Audiobook Creator</h3>
+          <p>Use AI voices to create content for YouTube, courses, or audiobooks.</p>
         </div>
       </div>
     </div>
@@ -169,7 +191,7 @@
   <section class="section" id="start">
     <h2>Start Your AI Hustle</h2>
     <p>Get access to step-by-step guides, ready-to-use prompts, and premium tools today.</p>
-    <a href="#" class="cta-button">Download Toolkit</a>
+    <a href="newsletter-signup.html" class="cta-button">Start Your Journey Now</a>
   </section>
 
   <section class="support">
@@ -182,7 +204,6 @@
     <p>&copy; 2025 Spezi Enterprise. All rights reserved.</p>
     <p><em>Impressum will be updated once physical headquarters are established.</em></p>
   </footer>
-
 </body>
 
 </html>
